tests/reference/cpp-test_builtin_pow-56b3f92.stderr
style suggestion: Could have used '**' instead of 'pow'
  --> tests/../integration_tests/test_builtin_pow.py:11:16
   |
11 |     assert i32(pow(a, b)) == 32
   |                ^^^^^^^^^ '**' could be used instead
code generation error: Type number '16' not supported
   --> $DIR/src/bin/../runtime/lpython_builtin.py:106:1
    |
106 | T = TypeVar('T')
    | ^^^^^^^^^^^^^^^^ 
